--- a/index.html
+++ b/index.html
@@ -132,19 +132,7 @@
                         <div class="card-body paraforma lead">
 
                             <p>
-                                Ce cours est accès communication marketing, il m’a permis d’en apprendre plus les problèmes qui peuvent survenir lors de la planification et de l’évaluation des stratégies de communication marketing et de leur exécutions. J’ai pu voir comment définir une catégorie de produit via le FCB grid model, quel type de communication adopter en fonction du type de produit ainsi que comment définir un budget communication et comment le répartir sur l’année.
-                            </p>
-                            <p>
-                                Ce cours introduit entre autre les concepts de ‘brand loyalty’ et de ‘brand equity’, la théorie des processus sélectifs, comment mesurer les résultats d’une campagne de communication, le processus décisionnel du consommateur.
-                            </p>
-                            <p>
-                                J’ai pu voir comment fonctionne une publicité pour attirer l’attention du consommateur, comment ensuite elle doit faire pour susciter l’intérêt du consommateur et établir du désir  pour le produit et le convaincre de passer à l’acte d’achat via le modèle AIDA
-                            </p>
-                            <p>
-                                Construire efficacement une publicité via le modèle MECCAS (Means-end model), ainsi que les différentes stratégies de message (?!), cognitif, conatif, et affectif.
-                            </p>
-                            <p>
-                                Cette formation permet d’acquérir les connaissances nécessaire afin de pouvoir prendre la bonne décision en matière de communication et de placement de publicité et de marketing numérique.
+                                C’est une formation qui permet d’acquérir les connaissances nécessaires en communication et en placement de publicité ainsi qu’en marketing numérique. Cela m’a permis d’en apprendre plus sur des concepts comme, entre autres, savoir définir une catégorie de produit, ainsi que le type de campagne de communication à adopter en fonction du type de produit, comment répartir un budget de communication, etc
                             </p>
 
                             <div class="row">
@@ -164,7 +152,7 @@
 
                                         <li>Le model AIDA, MECCAS et le FCB grid model</li>
                                         <li>Comment determiner un budget communication marketing</li>
-                                        <li>Distribution of advertising budget (???)</li>
+                                        <li>Répartition du budget publicitaire</li>
                                         <li>L'effet de carry-over, de wear-out et de decay</li>
                                         <li>Les messages cognitif, conatif et affectif</li>
                                     </ul>
@@ -184,10 +172,10 @@
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                         <div class="card-body paraforma lead">
                             <p>
-                                Ce cours m’a permis de découvrir une facette différente et très intéressante du management.  C’est une formation qui permet de connaître les enjeux auxquels sont confronté les entreprises souhaitant intégrer des marchés innovant et futur afin de les comprendre et de s’y adapter en adoptant une vision du management orienté apprentissage.
+                                Ce cours m’a permis de découvrir une facette différente du management. Il couvre les enjeux auxquels sont confrontées les entreprises qui souhaitent innover. Il explique comment ces dernières peuvent toucher le marché désiré en adoptant une vision du management orienté sur l’expérimentation et l’apprentissage.
                             </p>
                             <p>
-                                Il permet plus généralement de développer ses capacité à diriger et à concevoir une organisation afin de mettre en œuvre efficacement les initiatives d’innovation et d’atteindre leurs objectifs stratégiques, ainsi que de comprendre les détails de la gestion de l’innovation lorsque des technologies perturbatrices sont impliquées.
+                                Il permet plus généralement d'apprendre développer ses capacité à diriger et à concevoir une organisation afin de mettre en œuvre efficacement les initiatives d’innovation et d’atteindre leurs objectifs stratégiques, ainsi que de comprendre les détails de la gestion de l’innovation lorsque des technologies perturbatrices sont impliquées.
                             </p>
                             <div class="row">
                                 <div class="col-12 text-center"><hr><h3>Points <span style="color: orange;">clés</span> du cours:</h3><hr></div>
@@ -205,7 +193,7 @@
 
                                 <div class="col-12 col-md-6">
                                     <ul>
-                                        <li>Types d'équipes (functional, lightweight, heavyweight, autonomous)</li>
+                                        <li>Comprendre les différentes types d'équipes (functional, lightweight, heavyweight, autonomous)</li>
                                         <li>Planification et évaluation (dans des contextes d'innovation)</li>
                                         <li>Modèles Action-Résultat (cause-effet)</li>
                                         <li>Facteurs de réussite dans l'organisation &#40;alignement stratégique; gouvernance; partage des ressources; renforcement de l'organisation&#41;</li>
@@ -225,27 +213,26 @@
                         </h5>
                     </div>
                     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-                        <div class="card-body">
-                            <p> cours sur ‘Les fondements de la stratégie d’entreprise‘ par l’université de Louvain m’a permis de comprendre et de décoder les principes fondamentaux du raisonnement stratégique, l’analyse de l’environnement concurrentiel, et l’évaluation de différentes options de développement pour les entreprises.</p>
-                             <div class="row">
+                        <div class="card-body paraforma lead">
+                            <p> Ce cours sur ‘Les fondements de la stratégie d’entreprise‘ par l’université de Louvain m’a permis de comprendre et de décoder les principes fondamentaux du raisonnement stratégique, l’analyse de l’environnement concurrentiel, et l’évaluation de différentes options de développement pour les entreprises.</p>
+                            <div class="row">
                                 <div class="col-12 text-center"><hr><h3>Points <span style="color: orange;">clés</span> du cours:</h3><hr></div>
                                 <div class="col-12 col-md-6">
                                     <ul>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
+                                        <li>L'analyse interne et externe de l'organisation</li>
+                                        <li>La construction des groupes stratégiques</li>
+                                        <li>Le développement international</li>
+                                        <li>Le diagnostic stratégique</li>
 
                                     </ul>
                                 </div>
 
                                 <div class="col-12 col-md-6">
                                     <ul>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
-                                        <li></li>
+                                        <li>Les stratégies business et corporate</li>
+                                        <li>La gestion du changement</li>
+                                        <li>La stratégie et le leadership</li>
+
 
 
                                     </ul>
@@ -661,7 +648,7 @@
             });
             $(window).scroll(function(){
                 let sc = $(this).scrollTop();
-                if(sc > 3100){
+                if(sc > 3000){
                     $('.pourquoi').addClass('vignets');}
             });
         </script>
