--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                         <span>
                             <i class="fas fa-quote-right"></i>
                         </span>
-                        <h2>elit  <span style="color: orange">noster</span> ita nisi iis :</h2>
-                        <p>aute quid exquisitaque veniam cernantur commodo consequat concursionibus a velit</p>
+                        <h2>Compétence  <span style="color: orange">clé</span></h2>
+                         <p class="lead">Ma capacité à prendre du recul, à m'adapter et à rester flexible face au changement</p>
                     </div>
                 </div>
             </div>
@@ -294,7 +294,7 @@
                     <div class="carousel-item" style="min-height: 50vh">
                         <div class="carousel-caption d-none d-md-block">
                             <div class="row">
-                                <div class="col-md-6 col-12"><img class="card-img-top" src="./images/resto-style-img.PNG" alt="restaurant style"></div>
+                                <div class="col-md-6 col-12"><img class="card-img-top" src="./images/resto-style-img.jpg" alt="restaurant style"></div>
                                 <div class="col-6">
                                     <h5 class="text-center">Restaurant style</h5>
                                     <div class="row justify-content-center"><a class="btn btn-info text-center" role="button" href="https://jonathantisseyre.github.io/restaurantStyle/" target="_blank" style="width: 50vh">Visiter</a></div>
@@ -305,7 +305,7 @@
                     <div class="carousel-item" style="min-height: 50vh">
                         <div class="carousel-caption d-none d-md-block">
                             <div class="row">
-                                <div class="col-6"><img class="card-img-top" src="./images/shop-style-img.PNG" alt="restaurant style"></div>
+                                <div class="col-6"><img class="card-img-top" src="./images/shop-style-img.jpg" alt="restaurant style"></div>
                                 <div class="col-6">
                                     <h5 class="text-center">Shop style</h5>
                                     <div class="row justify-content-center"><a class="btn btn-info text-center" role="button" href="https://jonathantisseyre.github.io/shopStyle/" target="_blank" style="width: 50vh">Visiter</a></div>
@@ -316,7 +316,7 @@
                     <div class="carousel-item" style="min-height: 50vh">
                         <div class="carousel-caption d-none d-md-block">
                             <div class="row">
-                                <div class="col-6"><img class="card-img-top" src="./images/blog-style-img.PNG" alt="restaurant style"></div>
+                                <div class="col-6"><img class="card-img-top" src="./images/blog-style-img.jpg" alt="restaurant style"></div>
                                 <div class="col-6">
                                     <h5 class="text-center">Blog style</h5>
                                     <div class="row justify-content-center"><a class="btn btn-info text-center" role="button" href="https://jonathantisseyre.github.io/blogStyle/" target="_blank" style="width: 50vh">Visiter</a></div>
@@ -327,7 +327,7 @@
                     <div class="carousel-item" style="min-height: 50vh">
                         <div class="carousel-caption d-none d-md-block">
                             <div class="row">
-                                <div class="col-6"><img class="card-img-top" src="./images/consulting-style-img.PNG" alt="restaurant style"></div>
+                                <div class="col-6"><img class="card-img-top" src="./images/consulting-style-img.jpg" alt="restaurant style"></div>
                                 <div class="col-6">
                                     <h5 class="text-center">Consulting CV</h5>
                                     <div class="row justify-content-center"><a class="btn btn-info text-center" role="button" href="http://tisseyre.aero/" target="_blank" style="width: 50vh">Visiter</a></div>
